--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         }
 
         .wrapper {
+            margin-top: 7px;
+            margin-bottom: 7px;
+            height: 400px;
+            width: 600px;
             position: relative;
         }
 
@@ -58,6 +62,7 @@
                 </ul>
             </p>
             <h3>Demos</h3>
+            Hover over the images to see original image.
             <div class="wrapper">
                 <img src="demo1.png">
                 <canvas class="tiltshift" data-imgsrc="demo1.png" data-radius="50" data-offset="15"></canvas>
