--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
                 <img src="demo2.png">
                 <canvas class="tiltshift" data-imgsrc="demo2.png" data-radius="40" data-offset="80"></canvas>
             </div>
+            <h3>Install</h3>
+            <a href="https://github.com/zhengsun/TiltShifter">Fork on Github</a> or <a href="https://raw.githubusercontent.com/zhengsun/TiltShifter/master/tiltshifter.js">Download</a>
         </div>
     </body>
 </html>
