--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <body>
         <script src="tiltshifter.js"></script>
         <div class="container">
-            <h1>TiltShifter</h1>
+            <h1>tiltshifter.js</h1>
             <h3>Introduction</h3>
-            <p>TiltShifter is a Javascript library for creating <a href="http://en.wikipedia.org/wiki/Tilt%E2%80%93shift_photography">
+            <p>tiltshifter.js is a Javascript library for creating <a href="http://en.wikipedia.org/wiki/Tilt%E2%80%93shift_photography">
                 tilt-shift style</a> photographs using HTML5 Canvas.</p>
             <h3>Usage</h3>
             <p>Add the class "tiltshift" to a canvas element and set the following attributes.
@@ -72,7 +72,7 @@
                 <canvas class="tiltshift" data-imgsrc="demo2.png" data-radius="40" data-offset="80"></canvas>
             </div>
             <h3>Install</h3>
-            <a href="https://github.com/zhengsun/TiltShifter">Fork on Github</a> or <a href="https://raw.githubusercontent.com/zhengsun/TiltShifter/master/tiltshifter.js">Download</a>
+            <a href="https://github.com/zhengsun/tiltshifter.js">Fork on Github</a> or <a href="https://raw.githubusercontent.com/zhengsun/tiltshifter.js/master/tiltshifter.js">Download</a>
         </div>
     </body>
 </html>
